--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="#">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="https://kkk364.github.io/site03/CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css"  href="css/js.css">
   <title>Floral SARYUYU</title>
 </head>
